# matter-hub

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
.claude/skills/design-review/: SKILL.md
.claude/skills/design-token-rules/: SKILL.md
.claude/skills/neta-trend-daily/: SKILL.md
.claude/skills/react-ui-rules/: SKILL.md
.claude/skills/url-digest/: SKILL.md
.claude/skills/ux-heuristics-review/: SKILL.md
docs/: features.md
docs/superpowers/plans/: 2026-04-05-matter-hub-implementation.md  2026-04-08-semantic-search.md  2026-04-18-webapp.md
docs/superpowers/specs/: 2026-04-05-matter-hub-design.md  2026-04-08-semantic-search-design.md  2026-04-18-webapp-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  vite-env.d.ts
frontend/src/components/: ArticleRow.tsx  BulkSummarizePanel.tsx  ResummarizeModal.tsx  SummarizeWithTextModal.tsx  SummaryEditModal.tsx  SyncPanel.tsx
frontend/src/hooks/: useSwipeRow.ts
frontend/src/styles/: tokens.css
matter_hub/: __init__.py  api.py  cli.py  config.py  db.py  importer.py  ollama.py  sync.py  tagger.py  title_locale.py
matter_hub/webapp/: api_routes.py  helpers.py  main.py  routes.py  summarize_runner.py  sync_runner.py
matter_hub/webapp/static/: app.css  app.js
matter_hub/webapp/templates/: _article_list.html  _article_row.html  (+8 more)
tests/: test_api.py  test_cli.py  test_config.py  test_db.py  test_importer.py  test_ollama.py  test_tagger.py  test_title_locale.py  test_webapp.py
(+2 files in other folders)
